--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="CN">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Periodic Table 元素周期表（汉化）</title>
+		<title>八（7）元素周期表</title>
 		<link rel="stylesheet" href="./normalize.min.css" />
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="stylesheet" href="./汉化补丁.css" />
