--- a/index.html
+++ b/index.html
@@ -44,21 +44,8 @@ In the future, Wu will probably marry Li, they could live together and have happ
 
 (Li Qianyu & Wu Dongrun)</p>
 
-<h2>Second couple: A boy and his f**ked aunt who went to the same primary school</h2><p>
-
-  -I DO NOT think it is funny because they DO NOT like each other at all!</p><p>
-
-  This is a special couple. They are not strangers. They know each other for over 7.5 years. But this couple appeared in 2020, only came out for 1.5 years. It’s naturel. Because they studied hard in primary school and have no time to do something for more relationships. However, things never be the same. When it was the time to the middle school, there were only 4 classmates went to Nanhai. Luckily, two classmates are in the same class, they were Wang and Chen.</p><p>
-
-  In the first term, Wang didn’t speak too much with Chen. But the second term, Wang and Chen are the front and back table relationship. So they could talk whole day. When they were talking about the science problems, other people think that they were doing something about loving. Days go by, their images have been deeply rooted in the hearts of some classmates. So this couple came out. As soon as possible, everyone in our class knew this couple and identified them.</p><p>
-
-  In third term, things changed a bit. They were getting closer and closer. Wang even turned around to talk with her every class. When he was talking with someone, he also mentioned Chen, this made people more believed that they are sweet couples. Also, Wang talked with Chen a lot on WeChat. They have almost 200 Mb chat records without images! This is just like an astronomical number!</p><p>
-
-  At the end of the term, on a P.E. class, Chen ran to girls, said to every couple some bad sentences. (For example, she said “Didn’t you look for Wu” to Li). Then everyone said her back with the same sentence: Didn’t you look for Wang? In this story, you can see that everyone accepted this couple. How amazing it was!</p><p>
-
-  Sadly, one day, a student from class 2, asked a girl to get Chen’s phone number. When that girl found Chen, she almost got it. However, in the end, she was kicked out. After this, that boy never came to find her. Everyone in our class said that ”Wang Lingyu and Chen Lvyan Forever”!</p><p>
-
-(Wang Lingyu & Chen Lvyan)</p>
+<h2>something is hidden</h2><p>something is hidden
+</p>
 
 <h2>Third couple: Actually the sweetest couple I’ve ever seen, made another legend</h2><p>
 
