--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ In the future, Wu will probably marry Li, they could live together and have happ
 
 (Li Qianyu & Wu Dongrun)</p>
 
-<h2>something is hidden</h2><p>something is hidden
+<h2>something is hidden</h2><p>something is hidden. There were at least 600 words here. However, they were hidden by the stupid writer 
 </p>
 
 <h2>Third couple: Actually the sweetest couple I’ve ever seen, made another legend</h2><p>
