--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
 
         <footer>
-            <li class="writer">Page written by <a href="writer/index.html">3114396pig</a>.</li>
+            <li class="writer">Page written by <a href="writer/writer.html">3114396pig</a>.</li>
             <li class="writer">Email: <a href="mailto:pig2@3114396.com">pig2@3114396.com</a></li>
             <li class="writer">Web: <a href="https://202007.org">https://202007.org</a></li>
         </footer>
