--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="css/styles.css" rel="stylesheet">
+        <link rel="shortcut icon" href="img/pig.png">
         <script src="js/1.js" defer></script>
     </head>
 
