--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
                 <p class="wl2">You can definitely find lots of fun here!</p>
             </div>
             <div class="box2"><span class='Welcome1'><a href="https://202007.top">Periodic table of elements</a></span></div>
-            <div class="box3"><span class='Welcome'><a href="game1/index.html">A Small Game</a></span></div>
+            <div class="box3">
+                <span class='Welcome'><a href="game1/index.html">'A Small Game
+                    '
+                </a></span>
+                <span class='Welcome'><a href="Last Competition Research/index.html">'  More info'</a></span>
+            </div>
         </div>
 
         <section>
-
+<!--
             <div class="article">
                 <h1 class="second">History of Couples in Class 7</h1><div class='aaa'>
                     In the first, I should say that the whole article is a special joke. I wrote this to remember our school lives. So everyone in this article, Do Not To Be So Angry. Everyone who reads this, Don't Take It Seriously!</div><div class='aaa'>
@@ -102,7 +107,7 @@
                 
                       </article>
             </div>
-    
+        -->
             <div class="article2">
                 <div class="button">
                     <img src="img/pig.png" class="img">
